--- a/composer.json
+++ b/composer.json
@@ -13,18 +13,18 @@
         }
     ],
     "require": {
-        "php":                          "^7.2",
+        "php":                          "^7.2 || ^8.0",
         "ext-json":                     "*",
         "ext-openssl":                  "*",
-        "monolog/monolog":              "~1.24|~2.0",
-        "symfony/config":               "~3.3|~4.4",
-        "symfony/console":              "~3.3|~4.4",
-        "symfony/dependency-injection": "~3.4.10|^4.4",
-        "symfony/form":                 "~3.3|~4.4",
-        "symfony/http-kernel":          "~3.3|~4.4",
-        "symfony/options-resolver":     "~3.3|~4.4",
-        "symfony/translation":          "~3.3|~4.4",
-        "symfony/validator":            "~3.3|~4.4"
+        "monolog/monolog":              "^1.24 || ~2.0",
+        "symfony/config":               "^3.4 || ^4.4 || ^5.0",
+        "symfony/console":              "^3.4 || ^4.4 || ^5.0",
+        "symfony/dependency-injection": "^3.4 || ^4.4 || ^5.0",
+        "symfony/form":                 "^3.4 || ^4.4 || ^5.0",
+        "symfony/http-kernel":          "^3.4 || ^4.4 || ^5.0",
+        "symfony/options-resolver":     "^3.4 || ^4.4 || ^5.0",
+        "symfony/translation":          "^3.4 || ^4.4 || ^5.0",
+        "symfony/validator":            "^3.4 || ^4.4 || ^5.0"
     },
     "require-dev": {
         "ekino/phpstan-banned-code":      "^0.2 || ^0.3",
